<resources>
    <string name="app_name">ContactList</string>
    <string name="add_contact">Add contact</string>
    <string name="list">List</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="contact_details">Contact details</string>
    <string name="contact_list">Contact list</string>
</resources>